projects/04-keysmith-offline-signer-rs/crates/keysmith-cli/tests/snapshots/cli__derive_json.snap
---
source: crates/keysmith-cli/tests/cli.rs
expression: json
---
{
  "accountXpub": "xpub6Ce9NcJvTk36xtLSrJLZqE7wtgA5deCeYs7rSQtreh4cj6ByPtrg9sD7V2FNFLPnf8heNP3FGkeV9qwfzvZNSd54JoNXVsXFYSYwHsnJxqP",
  "accounts": [
    {
      "address": "0x70997970C51812dc3A010C7d01b50e0d17dc79C8",
      "path": "m/44'/60'/0'/0/1"
    },
    {
      "address": "0x3C44CdDdB6a900fa2b585dd299e03d12FA4293BC",
      "path": "m/44'/60'/0'/0/2"
    }
  ]
}
